Windows fixes.